<resources>
    <string name="app_name" translatable="false">TransektCount</string>
    <string name="app_name1" translatable="false">TransektCountGPS</string>
    <string name="location_attr_label" translatable="false">LocationCheck</string>
    <string name="ringSound_attr_label" translatable="false">RingSound</string>
    <string name="title_activity_add_species" translatable="false">AddSpeciesActivity</string>
    <string name="title_activity_count_options" translatable="false">CountOptionsActivity</string>
    <string name="title_activity_counting" translatable="false">CountingActivity</string>
    <string name="title_activity_del_species" translatable="false">DelSpeciesActivity</string>
    <string name="title_activity_edit_species_list" translatable="false">EditSpeciesListActivity</string>
    <string name="title_activity_filechooser" translatable="false">AdvFileChooser</string>
    <string name="title_activity_list_species" translatable="false">ShowResultsActivity</string>
    <string name="title_activity_meta" translatable="false">Metadata</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list_section">Transect Sections</string>
    <string name="back_twice">Press again to exit</string>
    <string name="cancelButton">Cancel</string>
    <string name="changeLogTitle">App Info</string>
    <string name="code_spec">Species Code</string>
    <string name="confirmDBImport">Are you sure you want to import a DB file? Your current data will be overwritten!\n\nNote! If this is an older version of the file, go afterwards to “Settings” and check that the correct data language is set.</string>
    <string name="confirmGPSDelete">Are you sure you want to delete the track data?</string>
    <string name="confirmGPSImport">Do you want to try to import the GPS file?</string>
    <string name="confirmListImport">Are you sure you want to import the species list? Your current counting data will be deleted! May last long for a long list.</string>
    <string name="confirmResetDB">Are you sure you want to reset the Transect DB? Your current counting data will be deleted!</string>
    <string name="corruptDb">DB error! If problem remains after restart and after import of a different TransektCount-DB, please de-install and re-install the app.</string>
    <string name="deleteTrackFail">Cannot delete tracks, the current DB has no tracks!</string>
    <string name="distanceToTrack">Distance to transect:</string>
    <string name="editMetaButton">Edit Metadata</string>
    <string name="exportBasisMenu">Export Basic DB</string>
    <string name="exportCSVMenu">Export Results (csv)</string>
    <string name="exportMenu">Export Current DB</string>
    <string name="exportSpeciesListMenu">Export Species List</string>
    <string name="external">External</string>
    <string name="from">from:</string>
    <string name="importBasisMenu">Import Basic DB</string>
    <string name="importButton">Import</string>
    <string name="importDB">Your database has been imported.</string>
    <string name="importFail">Your database could not be imported!</string>
    <string name="importFileMenu">Import DB</string>
    <string name="importGPS">The GPX file has been imported.</string>
    <string name="importGPSMenu">Import GPS Track</string>
    <string name="importList">The species list has been imported.</string>
    <string name="importListFail">The species list could not be imported!</string>
    <string name="importSpeciesListMenu">Import Species List</string>
    <string name="importTrackFail">GPS tracks are loaded. Please remove these before!</string>
    <string name="inspection_note">Inspection Note:</string>
    <string name="internal">Internal</string>
    <string name="kal_w">CW:</string>
    <string name="name_sect">Section</string>
    <string name="name_spec">Species Name</string>
    <string name="name_spec_g">Common Name</string>
    <string name="noCard">Cannot access the Documents/TransektCount directory!</string>
    <string name="no_GPSfile">There is no GPX file in Documents/TransektCount!</string>
    <string name="note">Transect Note:</string>
    <string name="rem_sp">Spec. Note:</string>
    <string name="rem_spec">Species Notes</string>
    <string name="reset2basic">Your database has been resetted.</string>
    <string name="resetDBMenu">Reset Data</string>
    <string name="resetFail">Your database could not be resetted!</string>
    <string name="resetGPSMenu">Remove GPS Track Data</string>
    <string name="resetTracks">Your track data has been deleted.</string>
    <string name="saveBasisDB">Exporting Basic DB to Documents/TransektCount.</string>
    <string name="saveDB">Exporting internal DB to Documents/TransektCount.</string>
    <string name="saveFail">Your database could not be exported!</string>
    <string name="saveFailList">The species list could not be exported!</string>
    <string name="saveList">Species list exported.</string>
    <string name="saveCSV">Exporting csv-file to Documents/TransektCount.</string>
    <string name="showResultsButton">Show Results</string>
    <string name="sortModeC">Sorted by code</string>
    <string name="sortModeN">Sorted by name</string>
    <string name="sortModeSC">Sorted by section + code</string>
    <string name="sortModeSN">Sorted by section + name</string>
    <string name="specis">Species</string>
    <string name="specsCommonLangMissing">Attention! The local data language is not defined in the old list. Please, select it in "Settings". Otherwise, German species names will be used.</string>
    <string name="sumi">Totals (internal):</string>
    <string name="sumSpec">Diff. Species:</string>
    <string name="sum_total">Totals (all):</string>
    <string name="sume">Totals (external):</string>
    <string name="time_sect">1. Count</string>
    <string name="timehead">Time:</string>
    <string name="title">Species-specific counting of\n\nbutterflies in transect sections</string>
    <string name="to">to:</string>
    <string name="track_err">There is a discrepancy between your sections and tracks! GPS function will be switched off.</string>
    <string name="tracks">tracks</string>
    <string name="viewHelpTitle">Help</string>
    <string name="viewLicenseTitle">Licenses</string>
    <string name="viewSectionButton">Counting</string>
    <string name="waitImport">Please wait, import may take a while!</string>
    <string name="with">with</string>
    <string name="fileHeadlineBasicDB">TransektCount Basic DB Files</string>
    <string name="fileHeadlineCSV">Species Lists</string>
    <string name="fileHeadlineDB">TransektCount DB Files</string>
    <string name="fileHeadlineGPS">TransektCount GPS Tracks</string>
    <string name="fileSize">Size</string>
    <string name="importHead">Data Import</string>
    <string name="noFile">No file available!</string>
    <string name="br_Error">There is a problem with the selected file!</string>
    <string name="clouds">Clouds (%):</string>
    <string name="date">Date:</string>
    <string name="editHeadTitle">Metadata of Inspection</string>
    <string name="endtm">until:</string>
    <string name="hinttm">Click here</string>
    <string name="inspector">Inspector Name:</string>
    <string name="starttm">Time from:</string>
    <string name="temperature">Temp. (°C):</string>
    <string name="transectnumber">Transect No.:</string>
    <string name="valClouds">Clouds out of range!</string>
    <string name="valTemp">Unrealistic temperature!</string>
    <string name="valWind">Wind out of range!</string>
    <string name="wind">Wind (0–4):</string>
    <string name="attention">Attention! </string>
    <string name="chooserTitle">Select photo app</string>
    <string name="cloneButton">Add a Section</string>
    <string name="hasTrack">New section cannot be created as GPS tracks exist. Please delete GPS track data before. The numbers of sections and tracks must match!</string>
    <string name="newCopyCreated">has been created!</string>
    <string name="newSectName">Section name is missing.</string>
    <string name="noPhotoPermit">The right to take photos is missing.</string>
    <string name="saveCountsButton">Save &amp; Exit</string>
    <string name="saving">Saving</string>
    <string name="sectSaving">Sections have been saved.</string>
    <string name="species_notes">Species notes:</string>
    <string name="action_share">Share</string>
    <string name="cloneSectTitle">New section name</string>
    <string name="delSpeciesTitle">Remove Species</string>
    <string name="deleteButton">Delete</string>
    <string name="editAddSpecTitle">Add Species</string>
    <string name="editDelSpecTitle">Delete Species</string>
    <string name="editSectTitle">Edit species list</string>
    <string name="send_to">Share notes</string>
    <string name="takePhoto">Take Photo</string>
    <string name="confirmDelete">Are you sure you want to delete the last section?\nInserting new sections would be possible later.</string>
    <string name="duplicate">Each name must be unique!</string>
    <string name="editSpeciesTitle">Edit Terms</string>
    <string name="informNodelete">To prevent DB corruption it is not possible to delete this section.\n\nOnly the last created section, if not the only one, can be deleted.\n(If this is not possible then your device has unfortunately not enough free resources to execute the function.)</string>
    <string name="isdouble"> is double!</string>
    <string name="isempty">Section name is missing!</string>
    <string name="labelEditSpecButton">Edit List</string>
    <string name="notContiguous">Not possible, as previously a section was deleted!</string>
    <string name="notesHint">Type notes here&#8230;</string>
    <string name="orcode"> or code</string>
    <string name="presentSpecs">Species in list:</string>
    <string name="strName">Name</string>
    <string name="titleEdit">Name of current section</string>
    <string name="labelDelSpecButton">Remove Species</string>
    <string name="addSpeciesTitle">Add Species</string>
    <string name="hintSearch">Search string</string>
    <string name="searchCharsL">Please, >1 chars.</string>
    <string name="labelAddSpecButton">Add Species</string>
    <string name="specsCommonLang">Note: This is the old DB or species list format! To ensure common names are displayed correctly, you must select the data language under “Settings”.</string>
    <string name="specsToAdd">Further species:</string>
    <string name="changelog_full_title">App Info (TransektCount Ver.</string>
    <string name="changelog_show_full">more&#8230;</string>
    <string name="changelog_title">What\'s New</string>
    <string name="ok_button">OK</string>
    <string name="title_help_dialog">Help</string>
    <string name="title_license_dialog">Licenses</string>
    <string name="pref_alert_sound">Audible Event Alert</string>
    <string name="pref_alert_sound_summ">Sound an audible alert when an event is triggered</string>
    <string name="pref_auto_section">Indicate transect section by GPS</string>
    <string name="pref_auto_section_summ">Marks automatically the current section by GPS (provided a suitable GPX list of transect coordinates is given)</string>
    <string name="pref_awake">Keep Screen On</string>
    <string name="pref_awake_summ">Prevent screen from sleeping whilst counting</string>
    <string name="pref_bg_dialog">Choose background image</string>
    <string name="pref_bg_title">Background</string>
    <string name="countCode">Code</string>
    <string name="countName">New Species</string>
    <string name="countNameG">New Species (common name)</string>
    <string name="spec_Name">Name</string>
    <string name="spec_NameG">Common Name</string>
    <string name="countCodeHint">Code</string>
    <string name="countNameHint">Name of Species</string>
    <string name="countNameHintG">Name of Species (common)</string>
</resources>