<?xml version="1.0" encoding="utf-8"?>
<!-- widget_add_species.xml is used by activity_add_species.xml and AddSpeciesActivity.java -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginLeft="5dp"
              android:layout_marginRight="5dp"
              android:layout_marginTop="5dp"
              android:background="@drawable/rounded_corner_ec"
              android:orientation="vertical"
              android:paddingEnd="5dp"
              android:paddingStart="5dp"
              android:paddingTop="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/specName"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="bottom|start|end|top"
            android:gravity="start|center"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="8"
            android:background="@drawable/edit_background"
            android:hint="@string/countName"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/specCode"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="bottom|start|end|top"
            android:gravity="start|center"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="3"
            android:background="@drawable/edit_background"
            android:hint="@string/countCode"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:textSize="14sp"/>
        <ImageView
            android:id="@+id/specPic"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="bottom|start|end|top"
            android:gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="3.4"
            android:scaleType="fitCenter"
            android:src="@drawable/p00000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/specNameG"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="bottom|start|end|top"
            android:gravity="start|center"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="10"
            android:background="@drawable/edit_background"
            android:hint="@string/countNameG"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/specId"
            android:layout_width="0dp"
            android:layout_weight="0.1"
            android:layout_height="match_parent"
            android:visibility="invisible"/>

        <ImageButton
            android:id="@+id/addCount"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="bottom|start|end|top"
            android:gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_weight="3"
            android:onClick="addCount"
            android:src="@android:drawable/ic_menu_add"/>
    </LinearLayout>

</LinearLayout>
