<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ widget_counting_head1.xml used by CountingWidgetHead1.java
  ~ Copyright © 2016-2025, Wilhelm Stein, Bonn, Germany.
  ~ Last edited on 2025-07-06.
  -->

<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="58dp"
    android:gravity="center_vertical"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    android:layout_marginTop="5dp"
    android:background="@drawable/rounded_corner"
    android:baselineAligned="false"
    android:paddingBottom="1dp"
    android:paddingEnd="0dp"
    android:paddingStart="5dp"
    android:paddingTop="1dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="11"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:paddingStart="1dp"
                android:paddingEnd="1dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/countName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="1dp"
                    android:layout_weight="6.8"
                    android:gravity="center_vertical"
                    android:hint="@string/countNameHint"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#bfffff"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/countCode"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:layout_weight="2.2"
                    android:gravity="center_vertical"
                    android:hint="@string/countCodeHint"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#bfffff"
                    android:textSize="17sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:paddingStart="1dp"
                android:paddingEnd="1dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/countNameg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="1dp"
                    android:gravity="center_vertical"
                    android:layout_weight="11"
                    android:hint="@string/countNameHintG"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#A7C2C2"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/countId"
                    android:layout_width="0dp"
                    android:layout_weight="0.1"
                    android:layout_height="match_parent"
                    android:visibility="invisible"/>

            </LinearLayout>

        </LinearLayout>
        
        <ImageView
            android:id="@+id/pSpecies"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.5"
            android:gravity="center_vertical|center_horizontal"
            android:paddingBottom="1dp"
            android:paddingEnd="1dp"
            android:paddingStart="1dp"
            android:paddingTop="1dp"
            android:scaleType="fitCenter"
            android:src="@drawable/p00000"
            tools:ignore="ContentDescription" />

    </TableRow>

</TableLayout>
